--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "less": "^3.12.2",
-    "popper.js": "^1.16.1",
+    "overlayscrollbars": "^1.13.0",
+    "overlayscrollbars-vue": "^0.2.2",
+  
     "vue": "^2.5.2",
-    "vue-happy-scroll": "^2.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
