--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "less-loader": "^4.1.0",
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
