--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
     "vue-clipboard2": "^0.3.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "qrcode2": "^1.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
