--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "less": "^3.12.2",
     "less-loader": "^4.1.0",
     "popper.js": "^1.16.1",
+    "qrcode2": "^1.2.3",
     "vue": "^2.5.2",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.0.1",
-    "qrcode2": "^1.2.3"
+    "vue2x-ace-editor": "^0.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -55,6 +56,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vue2-ace-editor": "0.0.15",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
