--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vue": "^2.5.2",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.0.1",
-    "vue2x-ace-editor": "^0.1.3"
+    "vue2-ace-editor": "0.0.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -56,7 +56,6 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "vue2-ace-editor": "0.0.15",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
