--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@salaku/js-sdk": "^1.1.17",
     "axios": "^0.21.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.3",
