--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qrcode2": "^1.2.3",
     "vue": "^2.5.2",
     "vue-clipboard2": "^0.3.1",
+    "vue-i18n": "^8.22.3",
     "vue-router": "^3.0.1",
     "vue2-ace-editor": "0.0.15"
   },
